--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
       <nav class="navigation">
 
         <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span
-            class="logo__item">Studio</span></a>
+          class="logo__item">Studio</span>
+        </a>
+
+
+
+
+        <button type="button" class="menu-button" data-menu-button aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="svg-mobile-button" width="40px" height="40px" aria-label="Переключатель мобильного меню">
+            <use class="icon-cross" href="./images/sprite.svg#cross"></use>
+            <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+          </svg>
+        </button>
+        
+        
+
 
         <ul class="navigation__list list">
           <li class="navigation__list-item">
