--- a/index.html
+++ b/index.html
@@ -161,23 +161,35 @@
           <li class="team-list__item">
 
             <picture>
+
               <source
-                srcset="./images/about-us/about-img-desktop-1.webp 1x, ./images/about-us/about-img-desktop-1@2x.webp 2x"
+                srcset="./images/studio/our-team/img-1-desktop.webp 1x, ./images/studio/our-team/img-1-desktop@2x.webp 2x"
                 media="(min-width: 1200px)" type="image/webp">
               <source
-                srcset="./images/about-us/about-img-desktop-1.jpg 1x, ./images/about-us/about-img-desktop-1@2x.jpg 2x"
+                srcset="./images/studio/our-team/img-1-desktop.jpg 1x, ./images/studio/our-team/img-1-desktop@2x.jpg 2x"
                 media="(min-width: 1200px)">
+
+
               <source
-                srcset="./images/about-us/about-img-tablet-1.jpg 1x, ./images/about-us/about-img-tablet-1@2x.jpg 2x"
+                srcset="./images/studio/our-team/img-1-tablet.webp 1x, ./images/studio/our-team/img-1-tablet@2x.webp 2x"
+                media="(min-width: 768px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-1-tablet.jpg 1x, ./images/studio/our-team/img-1-tablet@2x.jpg 2x"
                 media="(min-width:768px)">
-              <img class="about-list-img" src="./images/about-us/about-img-tablet-1.jpg"
-                alt="мастер намыливает бороду клиенту">
-              <img class="img" src="./images/studio/our-team/img-1.jpg" alt="Фото Игоря Демьяненко" />
+
+
+              <source
+                srcset="./images/studio/our-team/img-1-mobile.webp 1x, ./images/studio/our-team/img-1-mobile@2x.webp 2x"
+                media="(min-width: 480px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-1-mobile.jpg 1x, ./images/studio/our-team/img-1-mobile@2x.jpg 2x"
+                media="(min-width:480px)">
+
+
+              <img class="img" src="./images/studio/our-team/img-1-mobile.jpg" alt="Фото Игоря Демьяненко" />
+
+
             </picture>
-
-
-
-
 
 
             <div class="name-position">
@@ -216,9 +228,43 @@
             </div>
           </li>
 
+
           <li class="team-list__item">
-            <img class="img" src="./images/studio/our-team/img-2.jpg" alt="Фото Ольги Репиной" width="270"
-              height="260" />
+
+            <picture>
+
+              <source
+                srcset="./images/studio/our-team/img-2-desktop.webp 1x, ./images/studio/our-team/img-2-desktop@2x.webp 2x"
+                media="(min-width: 1200px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-2-desktop.jpg 1x, ./images/studio/our-team/img-2-desktop@2x.jpg 2x"
+                media="(min-width: 1200px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-2-tablet.webp 1x, ./images/studio/our-team/img-2-tablet@2x.webp 2x"
+                media="(min-width: 768px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-2-tablet.jpg 1x, ./images/studio/our-team/img-2-tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-2-mobile.webp 1x, ./images/studio/our-team/img-2-mobile@2x.webp 2x"
+                media="(min-width: 480px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-2-mobile.jpg 1x, ./images/studio/our-team/img-2-mobile@2x.jpg 2x"
+                media="(min-width:480px)">
+
+
+              <img class="img" src="./images/studio/our-team/img-2-mobile.jpg" alt="Фото Ольги Репиной" />
+
+
+            </picture>
+
+
+
+
             <div class="name-position">
               <h3 class="name-title">Ольга Репина</h3>
               <p class="position">Frontend Developer</p>
@@ -256,8 +302,41 @@
           </li>
 
           <li class="team-list__item">
-            <img class="img" src="./images/studio/our-team/img-3.jpg" alt="Фото Николая Тарасова" width="270"
-              height="260" />
+
+
+            <picture>
+
+              <source
+                srcset="./images/studio/our-team/img-3-desktop.webp 1x, ./images/studio/our-team/img-3-desktop@2x.webp 2x"
+                media="(min-width: 1200px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-3-desktop.jpg 1x, ./images/studio/our-team/img-3-desktop@2x.jpg 2x"
+                media="(min-width: 1200px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-3-tablet.webp 1x, ./images/studio/our-team/img-3-tablet@2x.webp 2x"
+                media="(min-width: 768px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-3-tablet.jpg 1x, ./images/studio/our-team/img-3-tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-3-mobile.webp 1x, ./images/studio/our-team/img-3-mobile@2x.webp 2x"
+                media="(min-width: 480px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-3-mobile.jpg 1x, ./images/studio/our-team/img-3-mobile@2x.jpg 2x"
+                media="(min-width:480px)">
+
+
+              <img class="img" src="./images/studio/our-team/img-3-mobile.jpg" alt="Фото Николая Тарасова" />
+
+
+            </picture>
+
+
+
             <div class="name-position">
               <h3 class="name-title">Николай Тарасов</h3>
               <p class="position">Marketing</p>
@@ -295,8 +374,40 @@
           </li>
 
           <li class="team-list__item">
-            <img class="img" src="./images/studio/our-team/img-4.jpg" alt="Фото Михаила Ермакова" width="270"
-              height="260" />
+
+
+            <picture>
+
+              <source
+                srcset="./images/studio/our-team/img-4-desktop.webp 1x, ./images/studio/our-team/img-4-desktop@2x.webp 2x"
+                media="(min-width: 1200px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-4-desktop.jpg 1x, ./images/studio/our-team/img-4-desktop@2x.jpg 2x"
+                media="(min-width: 1200px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-4-tablet.webp 1x, ./images/studio/our-team/img-4-tablet@2x.webp 2x"
+                media="(min-width: 768px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-4-tablet.jpg 1x, ./images/studio/our-team/img-4-tablet@2x.jpg 2x"
+                media="(min-width:768px)">
+
+
+              <source
+                srcset="./images/studio/our-team/img-4-mobile.webp 1x, ./images/studio/our-team/img-4-mobile@2x.webp 2x"
+                media="(min-width: 480px)" type="image/webp">
+              <source
+                srcset="./images/studio/our-team/img-4-mobile.jpg 1x, ./images/studio/our-team/img-4-mobile@2x.jpg 2x"
+                media="(min-width:480px)">
+
+
+              <img class="img" src="./images/studio/our-team/img-4-mobile.jpg" alt="Фото Михаила Ермакова" />
+
+
+            </picture>
+
+
             <div class="name-position">
               <h3 class="name-title">Михаил Ермаков</h3>
               <p class="position">UI Designer</p>
