--- a/index.html
+++ b/index.html
@@ -515,49 +515,55 @@
 
   <footer class="footer">
     <div class="container">
-      <div class="footer-contacts">
-        <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span
-            class="logo__item">Studio</span></a>
-        <address class="address">
-          <span>г. Киев, пр-т Леси Украинки, 26</span><br />
-          <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-          <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
-      </div>
 
-      <div class="footer-social-list">
-        <h2 class="footer-subtitle">Присоединяйтесь</h2>
-        <ul class="social-list list">
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="social-list__svg">
-                <use href="./images/sprite.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="social-list__svg">
-                <use href="./images/sprite.svg#icon-twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="social-list__svg">
-                <use href="./images/sprite.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list__item">
-            <a class="social-list__link" href="">
-              <svg class="social-list__svg">
-                <use href="./images/sprite.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="contacts-social">
+
+        <div class="footer-contacts">
+          <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo__item">Studio</span></a>
+          <address class="address">
+            <span>г. Киев, пр-т Леси Украинки, 26</span><br />
+            <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+            <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
+        </div>
+        
+        <div class="footer-social-list">
+          <h2 class="footer-subtitle">Присоединяйтесь</h2>
+          <ul class="social-list list">
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="social-list__svg">
+                  <use href="./images/sprite.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="social-list__svg">
+                  <use href="./images/sprite.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="social-list__svg">
+                  <use href="./images/sprite.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item">
+              <a class="social-list__link" href="">
+                <svg class="social-list__svg">
+                  <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+
       </div>
+      
 
 
 
