--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
         </ul>
         <!--ПЕРЕЧЕНЬ РАБОТ-->
         <ul class="portfolio-list list">
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -146,7 +146,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -190,7 +190,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -237,7 +237,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -285,7 +285,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -330,7 +330,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -376,7 +376,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -425,7 +425,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
@@ -473,7 +473,7 @@
               </div>
             </a>
           </li>
-          <li class="potfolio-list-item">
+          <li class="portfolio-list-item">
             <a class="card link" href="">
               <div class="overlay-img">
 
