--- a/index.html
+++ b/index.html
@@ -626,9 +626,8 @@
 
         <input class="modal-policy-input visually-hidden" type="checkbox" value="accepted-policy" id="modal-policy"
           name="accepted-policy">
-        <label class="modal-policy-field" for="modal-policy">Соглашаюсь с рассылкой и принимаю &#160;
-          <a href="" class="modal-policy">Условия договора
-          </a>
+        <label class="modal-policy-field" for="modal-policy">Соглашаюсь с рассылкой и принимаю &#160; 
+          <a href="" class="modal-policy">Условия договора </a>
         </label>
 
         <button type="submit" class="modal-btn-submit">Отправить</button>
